fix nav demo overflow

--- a/src/styles/layout/_layout.scss
+++ b/src/styles/layout/_layout.scss
@@ -62,7 +62,6 @@ main
 {
   grid-area: page-content;
   width: 100%;
-  overflow-y: auto;
 
   & > .demo-example:first-of-type
   {
